--- a/index.html
+++ b/index.html
@@ -47,12 +47,18 @@
         <ul class="list header-contact">
           <li class="item">
             <a class="link header-contact-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+              >
+              <svg class="contact-icon" width="16" height="12">
+                <use href="./images/icons.svg#icon-envelope"></use></svg
+              >info@devstudio.com
+            </a>
           </li>
           <li class="item">
             <a class="link header-contact-link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
+              ><svg class="contact-icon" width="10" height="16">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -62,9 +68,11 @@
     <main>
       <!--1 блок герой-->
       <section class="hero">
-        <div class="container hero-container">
-          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-          <button class="hero-button" type="button">Замовити послугу</button>
+        <div class="ovarlfy">
+          <div class="container hero-container">
+            <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+            <button class="hero-button" type="button">Замовити послугу</button>
+          </div>
         </div>
       </section>
 
@@ -74,6 +82,11 @@
           <h2 hidden>Переваги</h2>
           <ul class="list features-list">
             <li class="card-features item">
+              <div class="icon">
+                <svg class="icon-svg">
+                  <use href="./images/icons.svg#icon-antenna1"></use>
+                </svg>
+              </div>
               <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="features-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
@@ -81,6 +94,11 @@
               </p>
             </li>
             <li class="card-features item">
+              <div class="icon">
+                <svg class="icon-svg">
+                  <use href="./images/icons.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="features-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="features-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -88,12 +106,22 @@
               </p>
             </li>
             <li class="card-features item">
+              <div class="icon">
+                <svg class="icon-svg">
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="features-title">ПЛАНУВАННЯ</h3>
               <p class="features-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="card-features item">
+              <div class="icon">
+                <svg class="icon-svg">
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="features-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="features-text">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -156,6 +184,36 @@
               <div class="card-text">
                 <h3 class="name">Ігор Дем'яненко</h3>
                 <p class="job-title" lang="en">UI Designer</p>
+                <ul class="social-links">
+                  <li>
+                    <a href="" class="social-link">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="social-link">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="social-link">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="social-link">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card item">
@@ -169,6 +227,36 @@
               <div class="card-text">
                 <h3 class="name">Ольга Рєпіна</h3>
                 <p class="job-title" lang="en">Marketing</p>
+                <ul class="social-links">
+                  <li>
+                    <a href="" class="social-link">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="social-link">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="social-link">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="social-link">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card item">
@@ -182,6 +270,36 @@
               <div class="card-text">
                 <h3 class="name">Микола Тарасов</h3>
                 <p class="job-title" lang="en">Frontend Developer</p>
+                <ul class="social-links">
+                  <li>
+                    <a href="" class="social-link">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="social-link">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="social-link">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="social-link">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card item">
@@ -195,7 +313,84 @@
               <div class="card-text">
                 <h3 class="name">Михайло Єрмаков</h3>
                 <p class="job-title" lang="en">Product Designer</p>
+                <ul class="social-links">
+                  <li>
+                    <a href="" class="social-link">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="social-link">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="social-link">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="social-link">
+                      <svg class="social-icon">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- постійні клієнти -->
+
+      <!-- Постійні клієнти -->
+      <section class="section">
+        <div class="container">
+          <h2 class="section-title-work">Постійні клієнти</h2>
+          <ul class="client-list">
+            <li>
+              <a href="" class="client-link">
+                <svg class="client-icon">
+                  <use href="./images/icons.svg#icon-group1"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a href="" class="client-link">
+                <svg class="client-icon">
+                  <use href="./images/icons.svg#icon-group2"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a href="" class="client-link">
+                <svg class="client-icon">
+                  <use href="./images/icons.svg#icon-group3"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a href="" class="client-link">
+                <svg class="client-icon">
+                  <use href="./images/icons.svg#icon-group4"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a href="" class="client-link">
+                <svg class="client-icon">
+                  <use href="./images/icons.svg#icon-group5"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a href="" class="client-link">
+                <svg class="client-icon">
+                  <use href="./images/icons.svg#icon-group6"></use></svg
+              ></a>
             </li>
           </ul>
         </div>
@@ -236,7 +431,47 @@
             </ul>
           </address>
         </div>
-      </div>
-    </footer>
+        <!-- підвал-підвал))) -->
+        <div class="footer-social">
+                    <p class="footer-text">приєднуйтесь</p>
+                    <ul class="footer-links">
+                
+                        <li>
+                            <a href="" class="footer-link">
+                                <svg class="footer-icon">
+                                    <use href="./images/icons.svg#icon-f_instagram-2">
+                                    </use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" class="footer-link">
+                                <svg class="footer-icon">
+                                    <use href="./images/icons.svg#icon-twitter">
+                                    </use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" class="footer-link">
+                                <svg class="footer-icon">
+                                    <use href="./images/icons.svg#icon-f_facebook-1">
+                                    </use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" class="footer-link">
+                                <svg class="footer-icon">
+                                    <use href="./images/icons.svg#icon-f_linkedin-1">
+                                    </use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                
+                </div>
+            </div>
+          </footer>
   </body>
 </html>
