--- a/portfolio.html
+++ b/portfolio.html
@@ -45,12 +45,16 @@
         <ul class="list header-contact">
           <li class="item">
             <a class="link header-contact-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+              ><svg class="contact-icon" width="16" height="12">
+                <use href="./images/icons.svg#icon-envelope"></use></svg
+              >info@devstudio.com
+            </a>
           </li>
           <li class="item">
             <a class="link header-contact-link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
+              ><svg class="contact-icon" width="10" height="16">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg>+38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -224,7 +228,48 @@
             </ul>
           </address>
         </div>
-      </div>
-    </footer>
+         <!-- підвал-підвал))) -->
+        <div class="footer-social">
+                    <p class="footer-text">приєднуйтесь</p>
+                    <ul class="footer-links">
+                
+                        <li>
+                            <a href="" class="footer-link">
+                                <svg class="footer-icon">
+                                    <use href="./images/icons.svg#icon-instagram">
+                                    </use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" class="footer-link">
+                                <svg class="footer-icon">
+                                    <use href="./images/icons.svg#icon-twitter">
+                                    </use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" class="footer-link">
+                                <svg class="footer-icon">
+                                    <use href="./images/icons.svg#icon-facebook">
+                                    </use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" class="footer-link">
+                                <svg class="footer-icon">
+                                    <use href="./images/icons.svg#icon-linkedin">
+                                    </use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                
+                </div>
+            </div>
+          </footer>
   </body>
 </html>
+
