робота над іконами

--- a/index.html
+++ b/index.html
@@ -49,14 +49,13 @@
             <a class="link header-contact-link" href="mailto:info@devstudio.com"
               >
               <svg class="contact-icon" width="16" height="12">
-                <use href="./images/icons.svg#icon-envelope"></use></svg
-              >info@devstudio.com
+                <use href="./images/iconsy.svg#icon-envelope"></use></svg>info@devstudio.com
             </a>
           </li>
           <li class="item">
             <a class="link header-contact-link" href="tel:+380961111111"
               ><svg class="contact-icon" width="10" height="16">
-                <use href="./images/icons.svg#icon-smartphone"></use>
+                <use href="./images/iconsy.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
             >
@@ -68,7 +67,7 @@
     <main>
       <!--1 блок герой-->
       <section class="hero">
-        <div class="ovarlfy">
+        <div class="ovarlay">
           <div class="container hero-container">
             <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
             <button class="hero-button" type="button">Замовити послугу</button>
@@ -84,7 +83,7 @@
             <li class="card-features item">
               <div class="icon">
                 <svg class="icon-svg">
-                  <use href="./images/icons.svg#icon-antenna1"></use>
+                  <use href="./images/iconsy.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -96,7 +95,7 @@
             <li class="card-features item">
               <div class="icon">
                 <svg class="icon-svg">
-                  <use href="./images/icons.svg#icon-clock-1"></use>
+                  <use href="./images/iconsy.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="features-title">ПУНКТУАЛЬНІСТЬ</h3>
@@ -108,7 +107,7 @@
             <li class="card-features item">
               <div class="icon">
                 <svg class="icon-svg">
-                  <use href="./images/icons.svg#icon-diagram-1"></use>
+                  <use href="./images/iconsy.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="features-title">ПЛАНУВАННЯ</h3>
@@ -119,7 +118,7 @@
             <li class="card-features item">
               <div class="icon">
                 <svg class="icon-svg">
-                  <use href="./images/icons.svg#icon-astronaut-1"></use>
+                  <use href="./images/iconsy.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="features-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
@@ -188,28 +187,28 @@
                   <li>
                     <a href="" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                        <use href="./images/iconsy.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                        <use href="./images/iconsy.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                        <use href="./images/iconsy.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                        <use href="./images/iconsy.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -231,28 +230,28 @@
                   <li>
                     <a href="" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                        <use href="./images/iconsy.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                        <use href="./images/iconsy.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                        <use href="./images/iconsy.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                        <use href="./images/iconsy.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -274,28 +273,28 @@
                   <li>
                     <a href="" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                        <use href="./images/iconsy.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                        <use href="./images/iconsy.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                        <use href="./images/iconsy.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                        <use href="./images/iconsy.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -317,28 +316,28 @@
                   <li>
                     <a href="" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                        <use href="./images/iconsy.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                        <use href="./images/iconsy.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                        <use href="./images/iconsy.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                        <use href="./images/iconsy.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -359,37 +358,37 @@
             <li>
               <a href="" class="client-link">
                 <svg class="client-icon">
-                  <use href="./images/icons.svg#icon-group1"></use></svg
+                  <use href="./images/iconsy.svg#icon-group1"></use></svg
               ></a>
             </li>
             <li>
               <a href="" class="client-link">
                 <svg class="client-icon">
-                  <use href="./images/icons.svg#icon-group2"></use></svg
+                  <use href="./images/iconsy.svg#icon-group2"></use></svg
               ></a>
             </li>
             <li>
               <a href="" class="client-link">
                 <svg class="client-icon">
-                  <use href="./images/icons.svg#icon-group3"></use></svg
+                  <use href="./images/iconsy.svg#icon-group3"></use></svg
               ></a>
             </li>
             <li>
               <a href="" class="client-link">
                 <svg class="client-icon">
-                  <use href="./images/icons.svg#icon-group4"></use></svg
+                  <use href="./images/iconsy.svg#icon-group4"></use></svg
               ></a>
             </li>
             <li>
               <a href="" class="client-link">
                 <svg class="client-icon">
-                  <use href="./images/icons.svg#icon-group5"></use></svg
+                  <use href="./images/iconsy.svg#icon-group5"></use></svg
               ></a>
             </li>
             <li>
               <a href="" class="client-link">
                 <svg class="client-icon">
-                  <use href="./images/icons.svg#icon-group6"></use></svg
+                  <use href="./images/iconsy.svg#icon-group6"></use></svg
               ></a>
             </li>
           </ul>
@@ -439,7 +438,7 @@
                         <li>
                             <a href="" class="footer-link">
                                 <svg class="footer-icon">
-                                    <use href="./images/icons.svg#icon-f_instagram-2">
+                                    <use href="./images/iconsy.svg#icon-f_instagram">
                                     </use>
                                 </svg>
                             </a>
@@ -447,7 +446,7 @@
                         <li>
                             <a href="" class="footer-link">
                                 <svg class="footer-icon">
-                                    <use href="./images/icons.svg#icon-twitter">
+                                    <use href="./images/iconsy.svg#icon-f_twitter">
                                     </use>
                                 </svg>
                             </a>
@@ -455,7 +454,7 @@
                         <li>
                             <a href="" class="footer-link">
                                 <svg class="footer-icon">
-                                    <use href="./images/icons.svg#icon-f_facebook-1">
+                                    <use href="./images/iconsy.svg#icon-f_facebook">
                                     </use>
                                 </svg>
                             </a>
@@ -463,7 +462,7 @@
                         <li>
                             <a href="" class="footer-link">
                                 <svg class="footer-icon">
-                                    <use href="./images/icons.svg#icon-f_linkedin-1">
+                                    <use href="./images/iconsy.svg#icon-f_linkedin">
                                     </use>
                                 </svg>
                             </a>
